// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PhoneNumberInput > should render correctly and match snapshot 1`] = `
<div
  class="ccu-field flex flex-col gap-1.5 relative"
  data-v-82c69faf=""
>
  <!--v-if-->
  <div
    class="ccu-field__row flex items-center relative"
    data-v-82c69faf=""
  >
    <input
      autocomplete="off"
      class="flex-grow text-base large"
      data-v-82c69faf=""
      id="base-input-5"
      pattern=".*"
      placeholder=""
      rows="0"
      style="--height: 40px; --width: 300px;"
      type="search"
    />
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    
    
  </div>
  <!--v-if-->
</div>
`;

exports[`PhoneNumberInput > should render correctly and match snapshot when required and provided 1`] = `
<div
  class="ccu-field flex flex-col gap-1.5 relative"
  data-v-82c69faf=""
>
  <!--v-if-->
  <div
    class="ccu-field__row flex items-center relative"
    data-v-82c69faf=""
  >
    <input
      autocomplete="off"
      class="flex-grow text-base large"
      data-v-82c69faf=""
      id="base-input-7"
      pattern=".*"
      placeholder=""
      required=""
      rows="0"
      style="--height: 40px; --width: 300px;"
      type="search"
      value="Test"
    />
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    
    
  </div>
  <!--v-if-->
</div>
`;

exports[`PhoneNumberInput > should render correctly and match snapshot with label 1`] = `
<div
  class="ccu-field flex flex-col gap-1.5 relative"
  data-v-82c69faf=""
>
  <label
    class="text-[11px] font-bold text-black"
    data-v-82c69faf=""
    for="base-input-6"
  >
    Top Label
  </label>
  <div
    class="ccu-field__row flex items-center relative"
    data-v-82c69faf=""
  >
    <input
      autocomplete="off"
      class="flex-grow text-base large"
      data-v-82c69faf=""
      id="base-input-6"
      pattern=".*"
      placeholder=""
      rows="0"
      style="--height: 40px; --width: 300px;"
      type="search"
    />
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    
    
  </div>
  <!--v-if-->
</div>
`;
